--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,12 +11,12 @@ jobs:
           name: Build docker images
           command: |
             for APP in */; do
-              pushd $APP
+              cd $APP
               docker build \
                 -t scalableminds/$APP:${CIRCLE_BRANCH}__${CIRCLE_BUILD_NUM} \
                 -t scalableminds/$APP:${CIRCLE_BRANCH} \
                 .
-              popd
+              cd ..
             done
       - run:
           name: Push docker images
