--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,15 +13,7 @@ jobs:
       - run:
           name: Build docker images
           command: |
-            for APP in $(./get_valid_order.sh); do
-              cd $APP
-              docker build \
-                -t scalableminds/$APP:${CIRCLE_BRANCH}__${CIRCLE_BUILD_NUM} \
-                -t scalableminds/$APP:${CIRCLE_BRANCH} \
-                -t scalableminds/$APP \
-                .
-              cd ..
-            done
+            ./build.sh
       - run:
           name: Push docker images
           command: |
