--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,8 +20,10 @@ jobs:
             docker login -u $DOCKER_USER -p $DOCKER_PASS
             for APP in */; do
               APP="${APP%/}"
-              docker push scalableminds/$APP:${CIRCLE_BRANCH}__${CIRCLE_BUILD_NUM}
-              docker push scalableminds/$APP:${CIRCLE_BRANCH}
+              docker push scalableminds/$APP:${CIRCLE_BRANCH}__${CIRCLE_BUILD_NUM} || \
+              docker push scalableminds/various:$APP__${CIRCLE_BRANCH}__${CIRCLE_BUILD_NUM}
+              docker push scalableminds/$APP:${CIRCLE_BRANCH} || \
+              docker push scalableminds/various:$APP__${CIRCLE_BRANCH}
             done
             docker logout
 
