--- a/graalvm/Dockerfile
+++ b/graalvm/Dockerfile
@@ -9,8 +9,8 @@ RUN apk --allow-untrusted --no-cache \
 RUN apk --no-cache add --virtual build curl && \
     curl -Ls "https://github.com/oracle/graal/releases/download/vm-${GRAALVM_VERSION}/graalvm-ce-${GRAALVM_VERSION}-linux-amd64.tar.gz" | \
     tar zx -C /usr/local/ && \
-    rm -f /usr/local/graalvm-${GRAALVM_VERSION}/src.zip && \
-    ln -s /usr/local/graalvm-${GRAALVM_VERSION} /usr/local/graalvm && \
+    rm -f /usr/local/graalvm-ce-${GRAALVM_VERSION}/src.zip && \
+    ln -s /usr/local/graalvm-ce-${GRAALVM_VERSION} /usr/local/graalvm && \
     apk del build
 
 ENV PATH ${PATH}:/usr/local/graalvm/bin
