kubectl: use curl instead of ADD for caching

--- a/kubectl/Dockerfile
+++ b/kubectl/Dockerfile
@@ -2,10 +2,13 @@ FROM alpine:3.6
 
 ENV KUBE_VERSION="v1.7.5"
 
-ADD https://storage.googleapis.com/kubernetes-release/release/${KUBE_VERSION}/bin/linux/amd64/kubectl /usr/local/bin/kubectl
+RUN apk --no-cache add --virtual build curl && \
+    curl -Ls -o /usr/local/bin/kubectl https://storage.googleapis.com/kubernetes-release/release/${KUBE_VERSION}/bin/linux/amd64/kubectl && \
+    apk del build
 
-RUN apk add --no-cache bash ca-certificates coreutils findutils && \
-    chmod +x /usr/local/bin/kubectl
+RUN apk add --no-cache bash ca-certificates coreutils findutils
+
+RUN chmod +x /usr/local/bin/kubectl
 
 RUN kubectl version --client
 
