--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,8 +18,7 @@ jobs:
           name: Push docker images
           command: |
             echo $DOCKER_PASS | docker login -u $DOCKER_USER --password-stdin
-            for APP in */; do
-              APP="${APP%/}"
+            for APP in $(./get_valid_order.sh); do
               docker push scalableminds/$APP:${CIRCLE_BRANCH}__${CIRCLE_BUILD_NUM} || {
                 docker tag \
                   scalableminds/$APP:${CIRCLE_BRANCH}__${CIRCLE_BUILD_NUM} \
