--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,21 +17,30 @@ jobs:
       - run:
           name: Push docker images
           command: |
+            does_repo_exist() {
+              curl --silent -f -lSL https://index.docker.io/v1/repositories/scalableminds/$1/tags > /dev/null
+            }
+
             echo $DOCKER_PASS | docker login -u $DOCKER_USER --password-stdin
             for APP in $(./get_valid_order.sh); do
-              docker push scalableminds/$APP:${CIRCLE_BRANCH}__${CIRCLE_BUILD_NUM} || {
+              if does_repo_exist $APP; then
+                docker push scalableminds/$APP:${CIRCLE_BRANCH}__${CIRCLE_BUILD_NUM}
+                docker push scalableminds/$APP:${CIRCLE_BRANCH}
+                eval "MICROBADGER_HOOK=MICROBADGER_HOOK_\${$APP}"
+                curl --silent -f -lSL -X POST $MICROBADGER_HOOK
+              else
                 docker tag \
                   scalableminds/$APP:${CIRCLE_BRANCH}__${CIRCLE_BUILD_NUM} \
                   scalableminds/various:${APP}__${CIRCLE_BRANCH}__${CIRCLE_BUILD_NUM}
                 docker push scalableminds/various:${APP}__${CIRCLE_BRANCH}__${CIRCLE_BUILD_NUM}
-              }
-              docker push scalableminds/$APP:${CIRCLE_BRANCH} || {
                 docker tag \
                   scalableminds/$APP:${CIRCLE_BRANCH} \
                   scalableminds/various:${APP}__${CIRCLE_BRANCH}
                 docker push scalableminds/various:${APP}__${CIRCLE_BRANCH}
-              }
+              fi
             done
+            MICROBADGER_HOOK_various
+            curl --silent -f -lSL -X POST MICROBADGER_HOOK_various
             docker logout
 
 workflows:
