helm: add build-base

--- a/helm/Dockerfile
+++ b/helm/Dockerfile
@@ -2,7 +2,7 @@ FROM alpine:3.6
 
 ENV HELM_VERSION="v2.9.0"
 
-RUN apk add --no-cache bash ca-certificates coreutils curl findutils grep git python3 wget openssh \
+RUN apk add --no-cache bash build-base ca-certificates coreutils curl findutils grep git python3 wget openssh \
     && pip3 install aiohttp github-webhook pyyaml 'ruamel.yaml<=0.15' slackweb \
     && wget http://storage.googleapis.com/kubernetes-helm/helm-${HELM_VERSION}-linux-amd64.tar.gz \
     && tar -xvf helm-${HELM_VERSION}-linux-amd64.tar.gz linux-amd64/helm \
