--- a/puppeteer/Dockerfile
+++ b/puppeteer/Dockerfile
@@ -8,7 +8,7 @@ RUN apt-get update && apt-get install -y wget --no-install-recommends \
     && sh -c 'echo "deb [arch=amd64] http://dl.google.com/linux/chrome/deb/ stable main" >> /etc/apt/sources.list.d/google.list' \
     && apt-get update \
     && apt-get install -y google-chrome-unstable fonts-ipafont-gothic fonts-wqy-zenhei fonts-thai-tlwg fonts-kacst ttf-freefont \
-    && apt-get install -y git \
+    && apt-get install -y git ssh-client \
       --no-install-recommends \
     && rm -rf /var/lib/apt/lists/* \
     && rm -rf /src/*.deb
