update helm to 2.16.7 and re-add necessary packages
see https://github.com/scalableminds/dockerfiles/commit/7ba0a83047d068764104d35280c3ba928eb251fb

--- a/helm/Dockerfile
+++ b/helm/Dockerfile
@@ -1,4 +1,7 @@
-FROM alpine/helm:2.9.0
+FROM alpine/helm:2.16.7
+
+apk add --no-cache bash ca-certificates coreutils curl findutils grep git python3 wget openssh \	
+    && pip3 install aiohttp github-webhook pyyaml 'ruamel.yaml<=0.15' slackweb
 
 RUN helm version --client
 RUN helm init -c
