fix helm Dockerfile

--- a/helm/Dockerfile
+++ b/helm/Dockerfile
@@ -1,6 +1,6 @@
 FROM alpine/helm:2.16.7
 
-apk add --no-cache bash ca-certificates coreutils curl findutils grep git python3 wget openssh \	
+RUN apk add --no-cache bash ca-certificates coreutils curl findutils grep git python3 wget openssh \	
     && pip3 install aiohttp github-webhook pyyaml 'ruamel.yaml<=0.15' slackweb
 
 RUN helm version --client
