helm: update ruamel and add build dependencies

--- a/helm/Dockerfile
+++ b/helm/Dockerfile
@@ -1,7 +1,8 @@
 FROM alpine/helm:2.16.7
 
-RUN apk add --no-cache bash ca-certificates coreutils curl findutils grep git python3 wget openssh \	
-    && pip3 install aiohttp github-webhook pyyaml 'ruamel.yaml<=0.15' slackweb
+RUN apk add --no-cache bash ca-certificates coreutils curl findutils grep git python3 wget openssh build-base python3-dev \	
+    && pip3 install aiohttp github-webhook pyyaml ruamel.yaml slackweb \
+    && apk del build-base python3-dev
 
 RUN helm version --client
 RUN helm init -c
