helm: fix py3-pip installation and add repos

--- a/helm/Dockerfile
+++ b/helm/Dockerfile
@@ -1,11 +1,12 @@
 FROM alpine/helm:3.4.2
 
-RUN apk add --no-cache bash ca-certificates coreutils curl findutils grep git python3 wget openssh build-base python3-dev \	
-    && py3-pip install aiohttp github-webhook pyyaml ruamel.yaml slackweb \
+RUN apk add --no-cache bash ca-certificates coreutils curl findutils grep git python3 py3-pip wget openssh build-base python3-dev \
+    && pip3 install aiohttp github-webhook pyyaml ruamel.yaml slackweb \
     && apk del build-base python3-dev
 
-RUN helm version --client
-RUN helm init -c
-RUN helm repo add incubator https://kubernetes-charts-incubator.storage.googleapis.com
+RUN helm version
+RUN helm repo add stable https://charts.helm.sh/stable
+RUN helm repo add incubator https://charts.helm.sh/incubator
+RUN helm repo list
 
 ENTRYPOINT ["helm"]
