--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,20 +8,23 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
+
     - name: Build docker images
       run: |
-        CI_BRANCH=$(git rev-parse --abbrev-ref HEAD)
-        NORMALIZED_CI_BRANCH=${CI_BRANCH//[\/-]/_}
+        export CI_BRANCH=$(git rev-parse --abbrev-ref HEAD)
+        export NORMALIZED_CI_BRANCH=${CI_BRANCH//[\/-]/_}
         ./build.sh
+
     - name: Run tests
       run: ./test.sh
+
     - name: Push docker images
       env: 
         DOCKER_USER: ${{ secrets.DOCKER_USER }}
         DOCKER_PASS: ${{ secrets.DOCKER_PASS }}
       run: |
-        CI_BRANCH=$(git rev-parse --abbrev-ref HEAD)
-        NORMALIZED_CI_BRANCH=${CI_BRANCH//[\/-]/_}
+        export CI_BRANCH=$(git rev-parse --abbrev-ref HEAD)
+        export NORMALIZED_CI_BRANCH=${CI_BRANCH//[\/-]/_}
         does_repo_exist() {
           curl --silent -f -lSL https://index.docker.io/v1/repositories/scalableminds/$1/tags > /dev/null
         }
