--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -38,7 +38,7 @@ jobs:
             docker push scalableminds/$APP:${NORMALIZED_CI_BRANCH}__${GITHUB_RUN_ID}
             docker push scalableminds/$APP:${NORMALIZED_CI_BRANCH}
             # eval "MICROBADGER_HOOK=\$MICROBADGER_HOOK_${APP/-/}"
-            curl --silent -f -lSL -X POST $MICROBADGER_HOOK
+            # curl --silent -f -lSL -X POST $MICROBADGER_HOOK
           else
             docker tag \
               scalableminds/$APP:${NORMALIZED_CI_BRANCH}__${GITHUB_RUN_ID} \
