--- a/duply/Dockerfile
+++ b/duply/Dockerfile
@@ -11,11 +11,9 @@ RUN  apt-get update \
       openssh-client \
       pwgen \
       python3-boto \
-      python3-pip \
       rsync \
   && apt-get clean \
-  && rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/* \
-  && pip3 install b2sdk==0.1.8 # duplicity needs old b2sdk version
+  && rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
 
 RUN mkdir -p /root/.duply/project
 COPY conf.template /root/.duply/project/conf.template
