--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,6 +12,7 @@ jobs:
           - events-relay
           - helm
           - kubectl
+          - netdebug
           - nginx-proxy
           - puppeteer
           - s3-proxy
