--- a/netdebug/Dockerfile
+++ b/netdebug/Dockerfile
@@ -1,14 +1,16 @@
 FROM debian:bullseye
 
 RUN  apt-get update \
-  && apt-get install -y \
-      coreutils \
-      curl \
-      dnsutils \
-      openssh-client \
-      rsync \
-      bash \
-  && apt-get clean \
-  && rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
+    && apt-get install -y \
+    coreutils \
+    curl \
+    dnsutils \
+    traceroute \
+    openssh-client \
+    rsync \
+    bash \
+    vim-tiny \
+    && apt-get clean \
+    && rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
 
 CMD ["/bin/bash"]
