--- a/slurm-docker-cluster/Dockerfile
+++ b/slurm-docker-cluster/Dockerfile
@@ -13,10 +13,12 @@ ARG SLURM_TAG=slurm-19-05-1-2
 ARG GOSU_VERSION=1.11
 
 RUN set -ex \
-    && yum makecache \
-    && yum -y update \
-    && yum -y install epel-release \
-    && yum -y install \
+    && dnf makecache \
+    && dnf -y update \
+    && dnf -y install dnf-plugins-core https://dl.fedoraproject.org/pub/epel/epel-release-latest-8.noarch.rpm \
+    && dnf config-manager --enable epel \
+    && dnf config-manager --set-enabled powertools \
+    && dnf -y install \
        wget \
        bzip2 \
        perl \
@@ -35,7 +37,7 @@ RUN set -ex \
        psmisc \
        bash-completion \
        vim-enhanced \
-    && yum clean all \
+    && dnf clean all \
     && rm -rf /var/cache/yum \
     && ln -s /usr/bin/python3 /usr/bin/python
 
