--- a/slurm-docker-cluster/Dockerfile
+++ b/slurm-docker-cluster/Dockerfile
@@ -1,4 +1,4 @@
-FROM centos:7
+FROM rockylinux:8.5
 
 ENV LC_ALL=en_US.utf8
 ENV LANG=en_US.utf8
@@ -13,10 +13,12 @@ ARG SLURM_TAG=slurm-19-05-1-2
 ARG GOSU_VERSION=1.11
 
 RUN set -ex \
-    && yum makecache fast \
-    && yum -y update \
-    && yum -y install epel-release \
-    && yum -y install \
+    && dnf makecache \
+    && dnf -y update \
+    && dnf -y install dnf-plugins-core https://dl.fedoraproject.org/pub/epel/epel-release-latest-8.noarch.rpm \
+    && dnf config-manager --enable epel \
+    && dnf config-manager --set-enabled powertools \
+    && dnf -y install \
        wget \
        bzip2 \
        perl \
@@ -27,18 +29,17 @@ RUN set -ex \
        make \
        munge \
        munge-devel \
-       python-devel \
-       python-pip \
-       python3 \
-       python3-devel \
-       python3-pip \
+       python38 \
+       python38-devel \
+       python38-pip \
        mariadb-server \
        mariadb-devel \
        psmisc \
        bash-completion \
        vim-enhanced \
-    && yum clean all \
-    && rm -rf /var/cache/yum
+    && dnf clean all \
+    && rm -rf /var/cache/yum \
+    && ln -s /usr/bin/python3 /usr/bin/python
 
 RUN python3 -m pip install --upgrade pip
 
@@ -73,8 +74,8 @@ RUN set -x \
     && install -D -m644 contribs/slurm_completion_help/slurm_completion.sh /etc/profile.d/slurm_completion.sh \
     && popd \
     && rm -rf slurm \
-    && groupadd -r --gid=995 slurm \
-    && useradd -r -g slurm --uid=995 slurm \
+    && groupadd -r --gid=994 slurm \
+    && useradd -r -g slurm --uid=994 slurm \
     && mkdir /etc/sysconfig/slurm \
         /var/spool/slurmd \
         /var/run/slurmd \
