change node_modules path

--- a/puppeteer/Dockerfile
+++ b/puppeteer/Dockerfile
@@ -39,7 +39,7 @@ RUN npm i puppeteer
 RUN groupadd -r pptruser && useradd -r -g pptruser -G audio,video pptruser \
     && mkdir -p /home/pptruser/Downloads \
     && chown -R pptruser:pptruser /home/pptruser \
-    && chown -R pptruser:pptruser /node_modules
+    && chown -R pptruser:pptruser /usr/app/node_modules
 
 # Run everything after as non-privileged user.
 USER pptruser
