re-add git and ssh-client to puppeteer dockerfile

--- a/puppeteer/Dockerfile
+++ b/puppeteer/Dockerfile
@@ -11,6 +11,7 @@ RUN apt-get update && apt-get install curl gnupg -y \
   && sh -c 'echo "deb [arch=amd64] http://dl.google.com/linux/chrome/deb/ stable main" >> /etc/apt/sources.list.d/google.list' \
   && apt-get update \
   && apt-get install google-chrome-stable -y --no-install-recommends \
+  && apt-get install -y git ssh-client --no-install-recommends \
   && rm -rf /var/lib/apt/lists/*
 
 # It's a good idea to use dumb-init to help prevent zombie chrome processes.
