--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -51,7 +51,7 @@ jobs:
         export CI_BRANCH=$(git rev-parse --abbrev-ref HEAD)
         export NORMALIZED_CI_BRANCH=${CI_BRANCH//[\/-]/_}
         does_repo_exist() {
-          curl --silent -f -lSL https://index.docker.io/v1/repositories/scalableminds/$1/tags > /dev/null
+          curl --silent -f -lSL https://hub.docker.com/v2/namespaces/scalableminds/repositories/$1/tags > /dev/null
         }
 
         echo $DOCKER_PASS | docker login -u $DOCKER_USER --password-stdin
