Include slurm-contribs in slurm-docker-cluster Dockerfile
This is needed for the `seff` tool which is used in the cluster_tools

--- a/slurm-docker-cluster/Dockerfile
+++ b/slurm-docker-cluster/Dockerfile
@@ -35,6 +35,7 @@ RUN set -ex \
        mariadb-server \
        mariadb-devel \
        psmisc \
+       slurm-contribs \
        bash-completion \
        vim-enhanced \
     && dnf clean all \
