Add dockerfile for bistro om parser

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,6 +19,7 @@ jobs:
           - sbt
           - slurm-docker-cluster
           - wklink
+          - om-bistro
     runs-on: ubuntu-latest
 
     steps:
