--- a/sbt/Dockerfile
+++ b/sbt/Dockerfile
@@ -22,4 +22,4 @@ WORKDIR /app/
 ENV HOME /root
 ENV SBT_OPTS "-Dsbt.global.base=/root/.sbt/${VERSION_SBT_MINOR}  -Dsbt.ivy.home=/tmp/.ivy2/  -Divy.home=/tmp/.ivy2/"
 RUN sbt sbtVersion # adding sbt to the cache
-RUN chmod -R 777 /root
+RUN chmod -R 777 /root /tmp/.ivy2
