--- a/duply/Dockerfile
+++ b/duply/Dockerfile
@@ -1,17 +1,17 @@
-FROM debian:bullseye
+FROM debian:trixie
 
 RUN  apt-get update \
   && apt-get install -y \
-      coreutils \
-      curl \
-      duply \
-      gettext-base \
-      gnupg \
-      mailutils \
-      openssh-client \
-      pwgen \
-      python3-boto \
-      rsync \
+  coreutils \
+  curl \
+  duply \
+  gettext-base \
+  gnupg \
+  mailutils \
+  openssh-client \
+  pwgen \
+  python3-boto \
+  rsync \
   && apt-get clean \
   && rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
 
