--- a/duply/Dockerfile
+++ b/duply/Dockerfile
@@ -10,8 +10,10 @@ RUN  apt-get update \
   mailutils \
   openssh-client \
   pwgen \
-  python3-boto3 \
+  python3-pip \
+  python3-boto \
   rsync \
+  && pip install --break-system-packages b2sdk \
   && apt-get clean \
   && rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
 
