--- a/duply/Dockerfile
+++ b/duply/Dockerfile
@@ -10,8 +10,7 @@ RUN  apt-get update \
   mailutils \
   openssh-client \
   pwgen \
-  python3-pip \
-  python3-boto \
+  python3-boto3 \
   python3-b2sdk \
   rsync \
   && apt-get clean \
