--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,6 +20,7 @@ jobs:
           - slurm-docker-cluster
           - wklink
           - om-bistro
+          - promtail
     runs-on: ubuntu-latest
 
     steps:
