add container exporter to CI

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,6 +22,7 @@ jobs:
           - om-bistro
           - metrics-pusher
           - promtail
+          - container-exporter
     runs-on: ubuntu-latest
 
     steps:
