add slurm exporter image

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,6 +18,7 @@ jobs:
           - s3-proxy
           - sbt
           - slurm-docker-cluster
+          - slurm-exporter
           - wklink
           - om-bistro
           - metrics-pusher
