Update puppeteer Dockerfile

--- a/puppeteer/Dockerfile
+++ b/puppeteer/Dockerfile
@@ -24,7 +24,8 @@ RUN chmod +x /usr/local/bin/dumb-init
 # ENV PUPPETEER_SKIP_CHROMIUM_DOWNLOAD true
 
 # Install puppeteer so it's available in the container.
-RUN npm i puppeteer
+RUN corepack enable && corepack install yarn
+RUN yarn install puppeteer
 
 # Add user so we don't need --no-sandbox.
 RUN groupadd -r pptruser && useradd -r -g pptruser -G audio,video pptruser \
