--- a/puppeteer/Dockerfile
+++ b/puppeteer/Dockerfile
@@ -24,7 +24,7 @@ RUN chmod +x /usr/local/bin/dumb-init
 # ENV PUPPETEER_SKIP_CHROMIUM_DOWNLOAD true
 
 # Install puppeteer so it's available in the container.
-RUN corepack enable && corepack install yarn
+RUN corepack enable
 RUN yarn install puppeteer
 
 # Add user so we don't need --no-sandbox.
