add ansible dockerfile

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,6 +10,7 @@ jobs:
           - cronut
           - duply
           - events-relay
+          - ansible
           - helm
           - kubectl
           - netdebug
