setup slurm user

--- a/slurm-python/Dockerfile
+++ b/slurm-python/Dockerfile
@@ -5,8 +5,15 @@ FROM ghcr.io/astral-sh/uv:$UV_VERSION AS uv
 FROM docker.io/python:$PYTHON_VERSION
 
 ARG SLURM_VERSION="24.05.3"
+ARG SLUMR_USER_UID=990
+ARG SLURM_USER_GID=990
 
 RUN apt-get update && apt-get install -y curl
+
+# Setup Slurm User
+RUN addgroup --gid "$SLURM_USER_GID" slurm \
+    && adduser --system --uid "$SLUMR_USER_UID" --ingroup slurm slurm
+
 # Install Slurm Client
 RUN curl -Lo /tmp/slurm-smd.deb "https://github.com/scalableminds/slurm-packages/releases/download/$SLURM_VERSION/slurm-smd_$SLURM_VERSION-1_amd64.deb" \
     && curl -Lo /tmp/slurm-smd-client.deb "https://github.com/scalableminds/slurm-packages/releases/download/$SLURM_VERSION/slurm-smd-client_$SLURM_VERSION-1_amd64.deb" \
